--- a/kththesis/references.bib
+++ b/kththesis/references.bib
@@ -1,10 +1,6 @@
 @article{smoothnessQoE,
     title = {Benchmarking handheld graphical user interface: smoothness quality of experience},
-    author[1] = {Ying-Dar, Lin},
-    author[2] = {Edward,T.-H. Chu},
-    author[3] = {Chien-Ling, Wen},
-    author[4] = {Yuan-Cheng,Lai},
-    author[5] = {I-Ching, Chen},
+    author = {Ying-Dar, Lin and Edward,T.-H. Chu and Chien-Ling, Wen and Yuan-Cheng,Lai and I-Ching, Chen},
     journal = {Computer and Electrical Engineering},
     volume = {68},
     year = {2018},
@@ -17,18 +13,12 @@
     year = {2019},
     title = {Animations in Cross-Platform Mobile Applications: An Evaluation of Tools, Metrics and Performance},
     language = {eng},
-    author[1] = {Biørn-Hansen, Andreas},
-    author[2] = {Grønli, Tor-Morten},
-    author[3] = {Ghinea, Gheorghita},
+    author = {Biørn-Hansen, Andreas and Grønli, Tor-Morten and Ghinea, Gheorghita},
     url = {http://hdl.handle.net/11250/2597987},
 }
 
 @inproceedings{launch_time,
-  author[1]={Zhang, W.},
-  author[2]={Wu, D.},
-  author[3]={Guo, G},
-  author[4]={Jiang, A.},
-  autor[5]={Guo, J.},
+  author={Zhang, W. and Wu, D. and Guo, G. and Jiang, A. and Guo, J.},
   booktitle={2018 International Conference on Computer, Information and Telecommunication Systems (CITS)}, 
   title={Research on the user time difference threshold during the mobile terminal app launch process}, 
   year={2018},
@@ -37,9 +27,7 @@
 
 @article{pwa_ahp,
   title={Progressive Web Application Assessment Using AHP},
-  author[1]={Khan, Asharul Islam},
-  author[2]={Al-Badi, Ali},
-  author[3]={Al-Kindi, Mahmood},
+  author = {Khan, Asharul Islam and Al-Badi, Ali and Al-Kindi, Mahmood},
   journal={Procedia Computer Science},
   volume={155},
   pages={289--294},
@@ -49,10 +37,7 @@
 }
 
 @article{smooth_gui,
-  author[1]={Lin, Y.},
-  author[2]={Chu, E.T.},
-  author[3]={Chang, E.},
-  author[4]={Lai, Y.},
+  author={Lin, Y. and Chu, E.T. and Chang, E. and Lai, Y.},
   journal={IEEE Transactions on Systems, Man, and Cybernetics: Systems}, 
   title={Smoothed Graphic User Interaction on Smartphones With Motion Prediction}, 
   year={2020},
@@ -93,8 +78,7 @@
 
 @inproceedings{gambhir2018analysis,
   title={Analysis of cache in service worker and performance scoring of progressive web application},
-  author[1]={Gambhir, Abhi},
-  author[2]={Raj, Gaurav},
+  author={Gambhir, Abhi and Raj, Gaurav},
   booktitle={2018 International Conference on Advances in Computing and Communication Engineering (ICACCE)},
   pages={294--299},
   year={2018},
@@ -144,10 +128,7 @@
     year = {2017},
     title = {Assessing the Impact of Service Workers on the Energy Efficiency of Progressive Web Apps},
     language = {eng},
-    author[1] = {Malavolta, Ivano},
-    author[2]={Procaccianti, Giuseppe},
-    author[3]={Noorland, Paul},
-    author[4]={Vukmirovic, Petar},
+    author = {Malavolta, Ivano and Procaccianti, Giuseppe and Noorland, Paul and Vukmirovic, Petar},
     keywords = {Mobile Communication ; Browsers ; Mobile Handsets ; Servers ; Google ; Performance Evaluation},
     url={http://www.ivanomalavolta.com/files/papers/Mobilesoft_2017.pdf},
 }
@@ -160,9 +141,7 @@
     year={2017},
     title={Progressive Web Apps: The Possible Web-native Unifier for Mobile Development},
     langage={en},
-    author[1]={Biørn-Hansen, A.},
-    author[2]={Majchrzak, T.},
-    author[3]={Grønli, T-M},
+    author={Biørn-Hansen, A. and Majchrzak, T. and Grønli, T-M},
     url={https://www.scitepress.org/papers/2017/63537/63537.pdf},
 }
 
@@ -176,9 +155,7 @@
     year = {2018},
     title = {Progressive web apps for the unified development of mobile applications},
     copyright = {Copyright 2018 Elsevier B.V., All rights reserved.},
-    author[1] = {Biørn-Hansen, A.},
-    author[2] = {Majchrzak, T.A.},
-    author[3] = {Grønli, T.-M.},
+    author = {Biørn-Hansen, A. and Majchrzak, T.A. and Grønli, T.-M.},
 }
 %TODO: do I cite it?
 @inproceedings{Biorn-Hansen3,
@@ -186,9 +163,7 @@
     title={Progressive Web Apps: the Definite Approach to Cross-platform development?},
     volume={51},
     booktitle={Hawaii International Conference on System Sciences},
-    author[1]={Biørn-Hansen, A.},
-    author[2]={Majchrzak, T.},
-    author[3]={Grønli, T-M},
+    author={Biørn-Hansen, A. and Majchrzak, T. and Grønli, T-M},
     pages={5735--5744},
     keywords={what are pwas, what do they offer now compared to other cross-platforms, where is the academic study now?},
     url={https://core.ac.uk/download/pdf/143481552.pdf}
@@ -198,11 +173,7 @@
     year={2018},
     title={Pride and Prejudice in Progressive Web Apps; Abusing Native App-like features in Web Applications},
     booktitle={Proceedings of the 2018 SIGSAC Conference on Computer and Communications Security},
-    author[1]={Jiyeon, L.},
-    author[2]={Hayeon, K.},
-    author[3]={Junghwan, P.},
-    author[4]={Insik, S.},
-    author[5]={Sooel, S.},
+    author={Jiyeon, L. and Hayeon, K. and Junghwan, P. and Insik, S. and Sooel, S.},
     keywords={Security},
     url={https://dl-acm-org.focus.lib.kth.se/doi/pdf/10.1145/3243734.3243867}
     
@@ -217,9 +188,7 @@
     year = {2015},
     title = {A Quantitative Assessment of Performance in Mobile App Development Tools},
     copyright = {Copyright 2016 Elsevier B.V., All rights reserved.},
-    author[1] = {Willocx, M.},
-    author[2] = {Vossaert, J.},
-    author[3] = {Naessens, V.},
+    author = {Willocx, M. and Vossaert, J. and Naessens, V.},
     keywords = {Cross-Platform Tools ; Mobile Applications ; Performance Analysis},
     url={https://ieeexplore-ieee-org.focus.lib.kth.se/document/7226724}
 }
@@ -227,8 +196,7 @@
 @misc{PWAbc_responsetime,
     year={2017},
     title={Comparing Progressive Web Applications with Native Android Applications - an evaluation of performance when it comes to response time },
-    author[1]={Rebecca, Fransson},
-    author[2]={Alexandre, Driaguine},
+    author={Rebecca, Fransson and Alexandre, Driaguine},
     organization={Linnaeus University},
     howpublished={Bachelor Thesis},
     keywords={Bachelor Thesis, PWA, response time},
@@ -260,8 +228,7 @@
 
 @inproceedings{PWA_UX_comparison_study,
     title={Analyzing User Experience in Mobile Web, Native and Progressive Web Applications: A User and HCI Specialist Perspectives},
-    author[1]={Cardieri, G.},
-    author[2]={Zaina, L.},
+    author={Cardieri, G. and Zaina, L.},
     booktitle={17th Brazilian Symposium on HumanFactors in Computing Systems },
     year={2018},
     url={https://dl.acm.org/doi/pdf/10.1145/3274192.3274201}
@@ -269,8 +236,7 @@
 
 @misc{bac_pwa_performance,
     title={Progressive Web Apps and other mobile developing techniques: a comparison},
-    author[1]={Kvist, J.},
-    author[2]={Mathisson, P.},
+    author = {Kvist, J. and Mathisson, P.},
     year={2019},
     howpublished={Bachelor Thesis},
     organization={Malmö University},
@@ -287,9 +253,7 @@
 }
 
 @inproceedings{MobileDevChallenges, 
-    author[1]={Joorabchi, M.E.},
-    author[2]={Mesbah, A.},
-    author[3]={Kruchten, P.},
+    author={Joorabchi, M.E. and Mesbah, A. and Kruchten, P.},
     booktitle={2013 ACM / IEEE International Symposium on Empirical Software Engineering and Measurement},
     title={Real Challenges in Mobile App Development},
     year={2013},
@@ -358,8 +322,7 @@
 }
 
 @inproceedings{CrossPlatform_dev,
-    author[1]={Rahul Raj, C.P.},
-    author[2]={Seshu Babu Tolety},
+    author={Rahul Raj, C.P. and Seshu Babu Tolety},
     booktitle={2012 Annual IEEE India Conference (INDICON)},
     title={A study on approaches to build cross-platform mobile applications and criteria to select appropriate approach},
     year={2012},
@@ -370,21 +333,16 @@
     year = {2019},
     title={An Empirical study of Cross-Platform Mobile Development in Industry},
     journal={Wireless Communication and Mobile Computing},
-    author[1]={Biørn-Hansen, A.},
-    author[2]={Ghinea, G.},
-    author[3]={Grønli, T-M},
-    autthor[4]={Alouneh, S.},
+    author={Biørn-Hansen, A. and Ghinea, G. and Grønli, T-M and Alouneh, S.},
     pages={5735--5744},
     keywords={what are pwas, what do they offer now compared to other cross-platforms, where is the academic study now?}
 }
 
 @article{nanoscope,
   title={Profiling Android Applications with Nanoscope},
-  author[1]={Liu, L.},
-  author[2]={Takamine, L.},
-  author[3]={Welc, A.},
+  author={Liu, L. and Takamine, L. and Welc, A.},
   year={2018},
-  journal={VMIL'18},
+  journal={Virtual Machines and Language Implementations '18},
 }
 
 @online{adb,
@@ -425,8 +383,7 @@
 
 @article{emulator_def,
   title={Google Android: An emerging software platform for mobile devices},
-  author[1]={Gandhewar, N.},
-  author[2]={Sheikh, R.},
+  author={Gandhewar, N. and Sheikh, R.},
   journal={International Journal on Computer Science and Engineering},
   volume={1},
   number={1},
@@ -479,8 +436,7 @@
 
 @inproceedings{cpu_sampling,
   title={A Randomized Sampling Clock for CPU Utilization Estimation and Code Profiling.},
-  author[1]={McCanne, Steven},
-  author[2]={Torek, Chris},
+  author={McCanne, Steven and Torek, Chris},
   booktitle={USENIX Winter},
   pages={387--394},
   year={1993},
@@ -489,20 +445,14 @@
 
 @inproceedings{cpu_emulator,
   title={Testing CPU emulators},
-  author[1]={Martignoni, Lorenzo},
-  author[2]={Paleari, Roberto},
-  authore[3]={Roglia, Giampaolo Fresi},
-  author[4]={Bruschi, Danilo},
+  author={Martignoni, Lorenzo and Paleari, Roberto and Roglia, Giampaolo Fresi and Bruschi, Danilo},
   booktitle={Proceedings of the eighteenth international symposium on Software testing and analysis},
   pages={261--272},
   year={2009}
 }
 
 @inproceedings{crossplatform_approaches,
-  author[1]={Latif, M.},
-  author[2]={Lakhrissi},
-  author[3]={Nfaoui, E. H.},
-  author[4]={Es-Sbai},
+  author={Latif, M. and Lakhrissi and Nfaoui, E. H. and Es-Sbai},
   booktitle={2016 International Conference on Information Technology for Organizations Development (IT4OD)}, 
   title={Cross platform approach for mobile application development: A survey}, 
   year={2016},
